更新git快速上手。txt

--- a/面经整理.md
+++ b/面经整理.md
@@ -1,3 +1,21 @@
+## Git的使用-（如何将本地项目上传到Github（三种简单、方便的方法））
+
+```java
+本地没有git仓库。就创建
+git clone https://github.com/seekskyworld/interviews.git//1，首次使用,把github上面的仓库克隆到本地
+git init					      //2，首次使用,创建仓库
+
+git add .					   //如果是克隆的仓库，需要cd进入仓库文件夹再add					
+git commit -m "首次提交，添加相关文件"		//暂存区中的更改正式提交到本地仓库
+	ssh-keygen -t rsa -C "xxxxxx@gmail.com" //首次使用，创建SSH KEY，把C:\Users\用户\.ssh\id_rsa.pub这个填进github，settings,sshkey页面
+	git remote add origin git@github.com:seekskyworld/interviews.git  //首次使用，通过ssh连接，直接检验本地ssh变量
+git push origin main //推送到远程仓库，如果远程仓库为空 git push -u origin main(master)
+```
+
+详细教程如下
+
+https://cloud.tencent.com/developer/article/1504684
+
 ## 腾讯面试：java和c++的区别
 
 Java 和 C++ 是两种不同的编程语言，它们在很多方面都有不同的特点和用途：
@@ -338,21 +356,7 @@ Java 语言是一种跨平台的编程语言，其一次编译到处运行的特
 
   总的来说，JDK 11相比于JDK 8提供了更多的功能和改进，包括新的语言特性、模块化系统以及安全性和性能方面的优化。
 
-## Git的使用-（如何将本地项目上传到Github（三种简单、方便的方法））
 
-```java
-	git clone https://github.com/seekskyworld/interviews.git//一，首次使用,把github上面的仓库克隆到本地
-	git init					      //一，首次使用,创建仓库
-git add .						     //二，如果是克隆的仓库，需要进入仓库文件夹再add					
-git commit -m "首次提交，添加相关文件"		
-	ssh-keygen -t rsa -C "xxxxxx@gmail.com" //首次使用，把C:\Users\用户\id_rsa.pub这个填进github，sshkey页面，只用一次就行
-	git remote add origin git@github.com:seekskyworld/interviews.git  //首次使用，通过ssh连接，直接检验本地ssh变量
-git push origin main //如果远程仓库为空 git push -u origin main(master)
-```
-
-详细教程如下
-
-https://cloud.tencent.com/developer/article/1504684
 
 ## 说一下HTTP状态码301和302分别代表什么，它们有什么区别
 
