新增笔试题

--- a/笔试整理.md
+++ b/笔试整理.md
@@ -1329,6 +1329,150 @@ public class Main {
 
 ```
 
+# 网易
+
+## 1.
+
+四个属性  "atk";        //攻击	 "atkper";  //攻击百分比  	"def";     //防御 	"spd";	//速度
+
+1输入描述输入6组卵魂的描述，两个阅魂之间有一行空行。对于每个例魂，第一行输入一个字符串，代表该御魂的主属性。
+
+第二行输入一个整数c，代表该脚魂的副词条数量。
+
+接下来的c行，每行输入一个字符串，代表该御魂的副属性。
+
+保证每个副属性的种类不同。
+
+0≤es41<=<10°
+
+输出描述输出4行，表示所有部魂的总属性。依次输出攻击、攻击百分比、防御、速度。
+
+示例1输入
+
+atkper 30
+1
+spd 4
+
+atk 100
+2
+spd 30
+atk 50
+
+def 10
+1
+atkper 20
+
+atkper 30
+4
+atk 150
+def 20
+spd 5
+atkper 20
+
+spd 15
+0
+
+atk 100
+1
+spd 5
+
+输出
+atk 400
+atkper 100
+def 30
+spd 59
+
+代码如下
+
+```java
+import java.util.*;
+// 注意类名必须为 Main, 不要有任何 package xxx 信息
+public class Main {
+   static String atk = "atk";        //攻击
+   static String atkper = "atkper";  //攻击百分比
+   static String def = "def";     //防御
+   static String spd = "spd";	//速度
+   static long atkNum = 0 ;
+    static  long atkperNum= 0;
+    static long defNum= 0;
+    static long spdNum= 0;
+    public static void main(String[] args) {
+        Scanner in = new Scanner(System.in);
+        // 注意 hasNext 和 hasNextLine 的区别
+        for (int i = 0; i < 6; i++) {
+            String A = in.nextLine();
+            dps( A);
+            int a = in.nextInt();in.nextLine();
+            for(int k = 0;k<a;k++){
+                String A1 = in.nextLine();
+                dps( A1);
+            }
+            if(i==5){break;}
+            in.nextLine();
+        }
+        System.out.println(atk+" "+atkNum);
+        System.out.println(atkper+" "+atkperNum);
+        System.out.println(def+" "+defNum);
+        System.out.println(spd+" "+spdNum);
+    }
+    public static void dps(String A1){
+        String[] s = A1.split(" ");
+        if(s[0].equals(atk)){
+            atkNum += Long.parseLong(s[1]);
+            return;
+        }
+        if(s[0].equals(atkper)){
+            atkperNum += Long.parseLong(s[1]);
+            return;
+        }if(s[0].equals(def)){
+            defNum += Long.parseLong(s[1]);
+            return;
+        }if(s[0].equals(spd)){
+            spdNum += Long.parseLong(s[1]);
+            return;
+        }
+    }
+}
+```
+
+## 2.
+
+小易正在玩《第五人格》,她扮演的是一个幸存者，需要修7个电机中的至少5个，然后从出口逃离。在路线上，小易需要时刻在离屠夫的曼哈顿距离大于k(否则就会被屠夫发现)。小易想知道，自己需要行走最少多少路程成功逃离?补充说明：1.曼哈顿距离：(x1,y₁)和(x2,y2)的曼哈顿距离为|T2-C1|+132-y1|。
+
+2.所有非障碍的格子都可以反复走多次。)输入描述第一行输入三个正整数n,m,k,代表地图的行数和列数，以及屠夫的警戒距离。接下来的n行，每行输出一个长度为m的字符串，用来表示地图。地图的要素如下：'S代表小易的起点，E代表出口，$代表电机，'T代表屠夫，#代表障碍物，代表空白。1≤n,m≤1001≤k≤n+m-2保证恰好有7个$字符。小易正在玩《第五人格》,她扮演的是一个幸存者，需要修7个电机中的至少5个，然后从出口逃离。在路线上，小易需要时刻在离屠夫的曼哈顿距离大于k(否则就会被屠夫发现)。小易想知道，自己需要行走最少多少路程成功逃离?
+补充说明：
+1.曼哈顿距离：(x1,y₁)和(x2,y2)的曼哈顿距离为|T2-C1|+132-y1|。
+2.所有非障碍的格子都可以反复走多次。
+)输入描述
+第一行输入三个正整数n,m,k,代表地图的行数和列数，以及屠夫的警戒距离。接下来的n行，每行输出一个长度为m的字符串，用来表示地图。地图的要素如下：
+'S代表小易的起点，E代表出口，$代表电机，'T代表屠夫，#代表障碍物，代表空白。
+1≤n,m≤1001≤k≤n+m-2
+保证恰好有7个$字符。
+
+)输出描述
+如果无法逃离，请输出-1。否则输出一个正整数，代表小易的最短行动距离。
+)示例1
+输入
+551
+#S$.
+$$.$
+.#.T$
+.$E
+$#…
+输出
+14
+说明
+路线如下图：橙色为屠夫警戒区域，黑色为障碍物。
+
+
+
+<img src=".\md图片\tk1.png" alt="tk1" style="zoom:100%;" />
+
+代码如下
+
+```
+```
+
 
 
 # 热题整理
