更改相关文件

--- a/hot100.md
+++ b/hot100.md
@@ -1037,10 +1037,10 @@ class Solution {
   1.解题思路
       先写一个翻转数组的方法，再使用主方法反转3次
       操作	结果
-  原始数组	  1 2 3 4 5 6 7
-  翻转所有元素   7 6 5 4 3 2 1
-  翻转前四位元素 5 6 7， 4 3 2 1
-  翻转后三位元素 5 6 7 ，1 2 3 4
+  原始数组	  1 2 3 4 5 6 7
+  翻转所有元素   7 6 5 4 3 2 1
+  翻转前四位元素 5 6 7， 4 3 2 1
+  翻转后三位元素 5 6 7 ，1 2 3 4
   
   直接写
   
@@ -3974,6 +3974,8 @@ prefixSumCount.put(currSum, prefixSumCount.get(currSum) - 1);
 
 
 
+
+
 前缀和对于本题的作用
 题目要求的是找出路径和等于给定数值的路径总数, 而:
 
@@ -6486,6 +6488,11 @@ class Solution {
 - `1 <= nums.length <= 100`
 - `0 <= nums[i] <= 400`
 
+主要思路如下：
+
+主要考虑到当前的最大值是怎么来的，是当前房屋金额和上上一个房屋的历史最大值之和，对比上一个房屋的最大值，
+把问题进行解耦，就可以逐一得到最大值
+
 代码如下：
 
 ```java
@@ -6559,16 +6566,35 @@ class Solution {
 
 - `1 <= n <= 104`
 
+| n    | 完全平方数    | 最少数量 |
+| ---- | ------------- | -------- |
+| 1    | 1             | 1        |
+| 2    | 1 + 1         | 2        |
+| 3    | 1 + 1 + 1     | 3        |
+| 4    | 4             | 1        |
+| 5    | 4 + 1         | 2        |
+| 6    | 4 + 1 + 1     | 3        |
+| 7    | 4 + 1 + 1 + 1 | 4        |
+| 8    | 4 + 4         | 2        |
+| 9    | 9             | 1        |
+| 10   | 9 + 1         | 2        |
+| 11   | 9 + 1 + 1     | 3        |
+| 12   | 4 + 4 + 4     | 3        |
+| 13   | 9 + 4         | 2        |
+
 解题思路，既然要找最小的数，那么最0依次开始找每个数的最少数量，一直到给的数n
 
 最重要的是这句代码
 
 ```java
+//从1开始求每一个数的最小平方数，1肯定是1，2是2
 dp[i] = Math.min(dp[i], dp[i - j * j] + 1);
 i代表当前遍历到的数字，j*j代表的是一个数，只是用j*j代表而已13-9是13-3*3
-dp[i - j * j] + 1意思就为dp[4]+1,dp[4]里存的就是4的完全平方数的最少数量，再加上9（3*3）也就是+1,
-13 = 9+4,结果为2
+dp[i - j * j] + 1意思就为dp[4]+1,
+dp[4]里存的是4的完全平方数的最少数量，值是1，再加上9（3*3）这个完全平方数，也就是再+1,
+13 = 9+4 = 3*3+2*2 ,结果为2
 ```
+
 
 代码如下
 
@@ -6637,6 +6663,12 @@ class Solution {
 - `1 <= coins[i] <= 231 - 1`
 - `0 <= amount <= 104`
 
+主要思路：
+
+其实和上道题一样，不过要注意的是需要先判断一下，硬币数组里的某个硬币是否超出当前循环的总金额数量，
+
+和减去这个硬币后的 dp [i],也就是这个剩余金额有没有硬币的最小组成数量
+
 代码如下
 
 ```java
@@ -6654,7 +6686,7 @@ class Solution {
             // 遍历硬币数组 coins
             for (int coin : coins) {
                 // 如果当前硬币的面额小于等于当前金额 i，并且使用当前硬币后剩余金额可凑成（不为初始值）
-                //意思就是减掉后的数不是初始值
+                // 意思就是减掉后的数不是初始值
                 if (coin <= i && dp[i - coin] != Integer.MAX_VALUE) {
                     // 更新凑成金额 i 的最少硬币数量为当前硬币数量加上使用当前硬币后剩余金额的最少硬币数量
                     dp[i] = Math.min(dp[i], dp[i - coin] + 1);
@@ -6702,7 +6734,13 @@ class Solution {
 输出: false
 ```
 
+思路如下
 
+其实这道题跟前面几道也差不多，也是通过从0到全部，逐步获取每一个的状态，然后到最后判断是否能组成完整字符串
+
+第一个代码是每个状态直接进行判断是否为true或者false
+
+第二个代码是每个状态进行判断单词最短组成数量
 
 代码如下
 
@@ -6748,21 +6786,38 @@ public class Solution {
 }
 ```
 
+```java
+//计算单词最短组成数量
+class Solution {
+    public boolean wordBreak(String s, List<String> wordDict) {
+       Set<String> set = new HashSet<>(wordDict);
+       //单词从每一个字符一一比较，并存储是否可以的状态
+       int n = s.length();
+       int[]dp = new int[n+1];
+       Arrays.fill(dp,Integer.MAX_VALUE);
+        dp[0] = 0; // 空字符串可被分割
+       for(int i = 1;i<n+1;i++){
+        for(String wordset:set){
+            int setlength =  wordset.length();
+            if(i-setlength>=0&&
+                dp[i-setlength]!=Integer.MAX_VALUE&&
+                s.substring(i-setlength,i).equals(wordset)){
+                    dp[i] = Math.min(dp[i-setlength]+1,dp[i]);
+                }
+        }
+       }
+       return dp[n]; //返回的也是数字
+    }
+}
+```
+
 
 
 ## [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
 
 给你一个整数数组 `nums` ，找到其中最长严格递增子序列的长度。
 
-**子序列** 是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，`[3,6,2,7]` 是数组 `[0,3,1,6,2,2,7]` 的
-
-子序列
-
-。
-
-
-
- 
+**子序列** 是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，`[3,6,2,7]` 是数组 `[0,3,1,6,2,2,7]` 的子序列。
 
 **示例 1：**
 
@@ -6799,6 +6854,16 @@ public class Solution {
 
 - 你能将算法的时间复杂度降低到 `O(n log(n))` 吗?
 
+思路如下：
+
+用两个循环来判断索引 k 的最长递增子序列长度，就是索引 0到 k 之间的这些元素进行判断，这些元素的索引为 i
+
+如果 nums[k] 大于 nums[i]，则表示 nums[k] 可以接在 nums[i] 后面形成一个更长的递增子序列
+
+还要定义一个变量max，更新索引 k 每次的最长递增子序列长度，的最大值
+
+代码如下：
+
 ```java
 public class Solution {
       public int lengthOfLIS(int[] nums) {
@@ -6829,6 +6894,7 @@ public class Solution {
                     dp[k] = Math.max(dp[k], dp[i] + 1);
                 }
             }
+            // 因为每个dp[k]的最长递增子序列长度不一样，不一定最后一个就是最长的
             // 更新最大长度
             max = Math.max(dp[k], max);
         }
@@ -6842,13 +6908,9 @@ public class Solution {
 
 ## [152. 乘积最大子数组](https://leetcode.cn/problems/maximum-product-subarray/)
 
-给你一个整数数组 `nums` ，请你找出数组中乘积最大的非空连续
-
-子数组
+给你一个整数数组 `nums` ，请你找出数组中乘积最大的非空连续子数组
 
 （该子数组中至少包含一个数字），并返回该子数组所对应的乘积。
-
-
 
 测试用例的答案是一个 **32-位** 整数。
 
@@ -6875,6 +6937,12 @@ public class Solution {
 和上面几道题差不多，也是创建dp数组，逐一填充每个数的乘积最大的非空连续子数组
 
 最终得到答案，因为有负数的存在，所以需要添加一个最小数组来进行辅助
+
+最大和最小数组，在当前索引为 i 时，都要同时判断dp数组前一个索引的最大值×当前数 和 dp数组前一个索引的最小值×当前数
+
+判断这两个数的大小，并存入当前dp[ i ] 状态
+
+同时更新最大值
 
 ```java
 class Solution {
@@ -6942,17 +7010,21 @@ public int maxProduct(int[] nums) {
 
 是一个经典的01背包问题
 
+背包的容量等于nums数组之和除于2
+
 奇数直接返回flase
 
 然后只要找到子数组加起来等于sum/2的数就行
 
-从sum/2遍历，倒叙遍历
+dp数组最后一个元素只要为true，证明有元素之和或者元素等于sum/2
+
+从sum/2遍历，倒叙遍历,可以判断减去当前数之后的dp状态
 
 
 
 ```
-dp[i] = dp[i] ||	dp[ sum/2 - num];  num 为nums数组其中一个数字，假设是dp[11-6] = dp[5] ,而之前dp[5-5]=dp[0],dp[0]为true，
-那么装上物品6和5，总重量11就为true
+dp[i] = dp[i] ||	dp[ sum/2 - num];  num 为nums数组其中一个数字，假设是dp[12-8] = dp[4] ,而之前dp[4-4]=dp[0],dp[0]为true，所以dp[4]为true
+那么装上物品8和4，总重量12就为true
 ```
 
 代码如下
@@ -6975,6 +7047,7 @@ class Solution {
         dp[0] = true; // 容量为 0 的背包始终能装满
 
             for (int num:nums){ 
+                //判断dp[i-sum_2]的状态是不是能放下
                 for (int i = target; i >=num; i--) {   //需要注意>=num，而不是0，
                                                         //否则会数组越界
                 dp[i] = dp[i] || dp[i-num];     
@@ -6985,7 +7058,41 @@ class Solution {
 }
 ```
 
+## [32. 最长有效括号](https://leetcode.cn/problems/longest-valid-parentheses/)
 
+困难
+
+给你一个只包含 `'('` 和 `')'` 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
+
+**示例 1：**
+
+```
+输入：s = "(()"
+输出：2
+解释：最长有效括号子串是 "()"
+```
+
+**示例 2：**
+
+```
+输入：s = ")()())"
+输出：4
+解释：最长有效括号子串是 "()()"
+```
+
+**示例 3：**
+
+```
+输入：s = ""
+输出：0
+```
+
+ 
+
+**提示：**
+
+- `0 <= s.length <= 3 * 104`
+- `s[i]` 为 `'('` 或 `')'`
 
 # 十六，多维动态规划
 
