更改相关文件

--- a/hot100.md
+++ b/hot100.md
@@ -3976,6 +3976,8 @@ prefixSumCount.put(currSum, prefixSumCount.get(currSum) - 1);
 
 
 
+
+
 前缀和对于本题的作用
 题目要求的是找出路径和等于给定数值的路径总数, 而:
 
@@ -7094,6 +7096,63 @@ class Solution {
 - `0 <= s.length <= 3 * 104`
 - `s[i]` 为 `'('` 或 `')'`
 
+解题思路如下
+
+```java
+//先看代码和图
+
+//也是一样的思想，逐一获取每个位置的最长有效括号字符串长度，注意“ ）()(())（ ”,这种字符串长度算是6
+//这个字符串长度为8，索引总长度为7，那么索引从0开始，到6的时候，dp[6]就是最长的了，就是dp[i] = 2 + dp[i-1] + dp[(i - dp[i - 1] - 1) -1]
+// 2为当前索引与之对应的左括号长度也就是2 ， dp[i-1] 就是前一个索引的长度状态 ，就是dp[5] 
+// dp[(i - dp[i - 1] - 1) -1] 等于  当前索引6减去前一个有效字符串的最大长度2，再减去1，就是与当前索引的右括号对应的左括号，因为必须要连续的才行，所以只需要判断前一个索引的状态有多少"最长有效括号字符串"长度,那么再减去1 ，就得到了 dp[2] = 2
+
+if (s.charAt(i) == ')') {        //如果不是就右括号 ')'就看下一个索引     // 5. 如果当前字符是右括号 ')'就要考虑到各种条件判断
+     //然后如果前一个是就左括号 '('，7.直接把本身dp[i] = 2,再加上前面有效字符状态，看图一     //  如果前一个不是左括号 '('，且是有效字符串，就看图二
+   
+```
+
+![截屏2020-04-17下午4.30.46.png](https://pic.leetcode-cn.com/6f176074b305e1571da1ab74839d22436be5fba22b592d618d531ac79dae8a7a-%E6%88%AA%E5%B1%8F2020-04-17%E4%B8%8B%E5%8D%884.30.46.png)
+
+![截屏2020-04-17下午4.26.34.png](https://pic.leetcode-cn.com/6e07ddaac3b703cba03a9ea8438caf1407c4834b7b1e4c8ec648c34f2833a3b9-%E6%88%AA%E5%B1%8F2020-04-17%E4%B8%8B%E5%8D%884.26.34.png)
+
+
+
+代码如下
+
+```java
+class Solution {
+    public int longestValidParentheses(String s) {
+        int size = s.length();          // 1. 获取输入字符串 s 的长度
+        int[] dp = new int[size];       // 2. 创建一个长度为 size 的整数数组 dp，用于动态规划存储
+        int maxVal = 0;                 // 3. 初始化最大有效括号子串的长度为 0
+
+        for (int i = 1; i < size; i++) {          // 4. 从第二个字符开始遍历字符串
+            if (s.charAt(i) == ')') {             // 5. 如果当前字符是右括号 ')'
+                if (s.charAt(i - 1) == '(') {     // 6.   且前一个字符是左括号 '('
+                    dp[i] = 2;                   // 7.     则当前位置的有效长度为 2
+                    if (i - 2 >= 0) {           // 8.     如果前面还有字符
+                        dp[i] += dp[i - 2];      // 9.       则加上前面位置的有效长度
+                    }
+                } else if (dp[i - 1] > 0) {       // 10.  否则，如果前一个位置有有效子串
+                    int openIndex = i - dp[i - 1] - 1;  // 11.计算对应的左括号位置，意思就是"(())"左右边括号索引为i，中间的2就为有效长度dp[i - 1]
+                    if (openIndex >= 0 && s.charAt(openIndex) == '(') { // 12.    如果左括号存在且匹配
+                        dp[i] = dp[i - 1] + 2;    // 13.      则当前位置的有效长度为前一个长度 +2
+                        if (openIndex - 1 >= 0) { // 14.      如果前面还有字符，意思就是"(())"前面还有"()",为"()(())"，这种最长长度是4+2=6
+                            dp[i] += dp[openIndex - 1]; // 15.       则加上更前面位置的有效长度
+                        }
+                    }
+                }
+            }
+            maxVal = Math.max(maxVal, dp[i]);   // 16.  更新最大有效子串的长度
+        }
+        return maxVal;                         // 17. 返回最大有效括号子串的长度
+    }
+}
+
+```
+
+
+
 # 十六，多维动态规划
 
 ## 	[62. 不同路径](https://leetcode.cn/problems/unique-paths/)
@@ -7297,7 +7356,49 @@ class Solution {
 - `1 <= s.length <= 1000`
 - `s` 仅由数字和英文字母组成
 
-解题思路
+解题思路一
+
+动态规划方法直接看代码
+
+```java
+class Solution {
+    public String longestPalindrome(String s) {
+        // 思路：逐一判断子串是否为回文串
+        // 使用二维dp数组，dp[j][k] 表示 s[j...k] 是否为回文串
+        int n = s.length(); // 获取字符串长度
+        boolean[][] dp = new boolean[n][n]; // 创建dp数组，默认为false
+        String maxStr = ""; // 记录最长回文子串
+        
+        for (int length = 0; length < n; length++) {  // length为子串长度
+            for (int j = 0; j + length < n; j++) {   //  j为起始位置索引
+                int k = j + length;                 //   k为结束位置索引
+
+                // 判断子串 s[j...k] 是否为回文串
+                if (length == 0) {  // 长度为 0 ，的子串（单个字符）一定是回文串
+                    dp[j][k] = true;
+                } else if (length == 1) { // 长度为 1，只有两个字符相等，才是回文串
+                    if(s.charAt(j) == s.charAt(k))
+                    dp[j][k] = true;
+                } else {    // 长度大于 1 ，只有首尾字符相等且去掉首尾的子串是回文串，才是回文串
+                    if( (s.charAt(j) == s.charAt(k)) && dp[j + 1][k - 1])
+                    dp[j][k] = true;
+                }
+
+                // 如果当前子串是回文串且长度大于 maxStr，则更新 maxStr
+                if (dp[j][k] && (k + 1) > maxStr.length()) {
+                    maxStr = s.substring(j, k + 1);
+                }
+            }
+        }
+
+        return maxStr; // 返回最长回文子串
+    }
+}
+```
+
+解题思路二
+
+中心扩散法
 
 先把字符串变成char数组，然后逐一遍历字母，
 
@@ -7528,7 +7629,16 @@ exection -> execution (插入 'u')
 
 不过这道题，字母相同有一个选择，字母不同有三个选择
 
+直接看代码，不懂的在看思路
+
 ```java
+//思路如下，创建一个二维dp数组
+        //每一个单词根据索引不同有不同的状态
+        //比如两个单词 word1 和 word2, int[][] dp = new int[6][6];
+        //比如单词一只有 w 时，单词二就需要添加4次，单词二只有 w 时，单词一需要删除4次
+        //人为的为单词一添加null状态，相当于这个索引时，单词一就需要一直添加5次
+        //人为的为单词二添加null状态，相当于这个索引时，单词一就需要一直删除5次
+
 //    示例 1：
 //
 //    输入：word1 = "abcde", word2= "ace"
@@ -7598,9 +7708,9 @@ public int minDistance(String word1, String word2) {
     // 填充dp数组
     for (int i = 1; i <= m; i++) {
         for (int j = 1; j <= n; j++) {
-            if (word1.charAt(i - 1) == word2.charAt(j - 1)) { // 如果当前字符相等，则不需要操作
+            if (word1.charAt(i - 1) == word2.charAt(j - 1)) { // 字符相同的情况
                 dp[i][j] = dp[i - 1][j - 1];
-            } else {
+            } else {									  // 字符不同的情况
                 int insert = dp[i][j - 1] + 1; // 插入操作：在 word1 的当前位置插入一个字符
                 int delete = dp[i - 1][j] + 1; // 删除操作：删除 word1 的当前字符
                 int replace = dp[i - 1][j - 1] + 1; // 替换操作：将 word1 的当前字符替换为 word2 的当前字符
