--- a/面经整理.md
+++ b/面经整理.md
@@ -831,3 +831,370 @@ SET TRANSACTION ISOLATION LEVEL READ COMMITTED;
 
 是通过使用日志文件和数据库引擎的撤销日志（undo log）来实现的。当执行一个事务时，MySQL会将事务中的每个数据修改操作记录到日志文件和撤销日志中，而不是直接修改数据库的数据文件。如果事务需要回滚，MySQL会使用撤销日志来撤销事务中的所有操作，将数据库恢复到事务开始之前的状态。这种方法可以确保即使在事务进行过程中发生故障，数据库也能够保持一致性。
 
+## 你为什么要用PostgreSQL数据库，对比mysql的好处是什么
+
+选择 PostgreSQL 数据库的原因有很多，它在某些方面相对于 MySQL 具有明显的优势：
+
+**1. 更符合 SQL 标准：**
+
+PostgreSQL 对 SQL 标准的遵循度更高，支持更丰富的 SQL 语法和特性，如窗口函数、递归查询、JSON 和 XML 数据类型等。这使得 PostgreSQL 在处理复杂查询和数据分析方面更加灵活和强大。
+
+**2. 更强大的数据类型：**
+
+PostgreSQL 支持更多的数据类型，包括数组、范围、UUID、JSONB、Hstore 等。这使得 PostgreSQL 能够更好地处理非结构化和半结构化数据，适用于更广泛的应用场景。
+
+**3. 更丰富的高级功能：**
+
+PostgreSQL 提供了更多的高级功能，如表继承、物化视图、规则系统、触发器函数等。这些功能可以帮助开发者更好地管理数据库、优化查询性能，并实现更复杂的业务逻辑。
+
+**4. 更完善的扩展性：**
+
+PostgreSQL 具有强大的扩展机制，可以通过插件来扩展数据库的功能。PostgreSQL 社区提供了丰富的插件，如 PostGIS（地理信息系统）、pg_trgm（全文搜索）等，可以满足各种特殊需求。
+
+**5. 更出色的性能：**
+
+在某些场景下，PostgreSQL 的性能可能优于 MySQL。例如，在处理复杂查询、大规模数据和高并发写入时，PostgreSQL 的性能表现可能更出色。
+
+**6. 更活跃的社区：**
+
+PostgreSQL 拥有一个活跃的社区，开发者可以获得更多的支持和帮助。PostgreSQL 社区还积极推动数据库的发展，不断推出新的功能和改进。
+
+**当然，MySQL 也具有其自身的优点：**
+
+- **更易于学习和使用：** MySQL 的语法相对简单，易于上手，适合初学者和小型项目。
+- **更广泛的应用：** MySQL 在 Web 应用领域拥有广泛的应用，拥有大量的用户和资源。
+- **更低的资源消耗：** MySQL 对系统资源的要求相对较低，适合在资源受限的环境中使用。
+
+**总结：**
+
+PostgreSQL 和 MySQL 都是优秀的开源数据库，它们各有优缺点。选择哪种数据库取决于您的具体需求和应用场景。
+
+- 如果您需要处理复杂查询、大规模数据、非结构化数据，或者需要更丰富的高级功能和扩展性，那么 PostgreSQL 可能更适合您。
+- 如果您需要一个简单易用、资源消耗低的数据库，或者您的应用场景更偏向于 Web 应用，那么 MySQL 可能更适合您。
+
+### 底层有什么区别
+
+PostgreSQL 和 MySQL 在底层实现上存在一些关键区别，这些区别导致了它们在功能、性能和适用场景上的差异。
+
+**1. 架构：**
+
+- **PostgreSQL:** 采用进程架构，每个连接都会创建一个独立的进程来处理。这种架构在处理复杂查询和高并发写入时具有优势，但可能会消耗更多的系统资源。
+- **MySQL:** 采用线程架构，多个连接可以共享同一个进程。这种架构在处理简单查询和高并发读取时具有优势，但可能会在处理复杂查询时出现性能瓶颈。
+
+**2. 事务处理：**
+
+- **PostgreSQL:** 支持多版本并发控制（MVCC），可以更好地处理并发事务，避免读写冲突。
+- **MySQL:** 早期版本主要采用行级锁，对并发事务的支持相对较弱。虽然 MySQL 5.6 引入了 MVCC，但在某些场景下，其性能可能不如 PostgreSQL。
+
+**3. 索引：**
+
+- **PostgreSQL:** 支持更丰富的索引类型，如 GiST、GIN、SP-GiST、BRIN 等，可以更好地处理空间数据、全文搜索和复杂查询。
+- **MySQL:** 主要支持 B-tree 索引，对于某些特殊场景，可能需要借助第三方插件来实现。
+
+**4. 查询优化器：**
+
+- **PostgreSQL:** 查询优化器更加智能，能够更好地处理复杂查询，生成更优的执行计划。
+- **MySQL:** 查询优化器相对简单，对于某些复杂查询，可能无法生成最优的执行计划。
+
+**5. 存储引擎：**
+
+- **PostgreSQL:** 只有一个存储引擎，但支持表分区、表空间等功能，可以灵活地管理数据存储。
+- **MySQL:** 支持多种存储引擎，如 InnoDB、MyISAM、Memory 等，可以根据不同的应用场景选择合适的存储引擎。
+
+**总结：**
+
+PostgreSQL 和 MySQL 在底层实现上的区别导致了它们在功能、性能和适用场景上的差异。PostgreSQL 在处理复杂查询、大规模数据和高并发写入方面具有优势，而 MySQL 在处理简单查询、高并发读取和 Web 应用方面具有优势。
+
+选择哪种数据库取决于您的具体需求和应用场景。如果您需要处理复杂查询、大规模数据、非结构化数据，或者需要更丰富的高级功能和扩展性，那么 PostgreSQL 可能更适合您。如果您需要一个简单易用、资源消耗低的数据库，或者您的应用场景更偏向于 Web 应用，那么 MySQL 可能更适合您。
+
+## 美团 秋招面经 一面
+
+### 介绍下ArrayList 与 LinkedList 之间的区别?分析下插入以及删除元素的复杂度？
+
+ArrayList 和 LinkedList 都是 Java 中常用的集合类，实现了 List 接口，但它们的底层数据结构和性能特点有所不同。
+
+**1. 数据结构：**
+
+- **ArrayList：** 内部使用动态数组来存储元素。
+- **LinkedList：** 内部使用双向链表来存储元素。
+
+**2. 元素访问：**
+
+- **ArrayList：** 通过索引访问元素非常快速，时间复杂度为 O(1)。
+- **LinkedList：** 访问特定索引的元素需要遍历链表，时间复杂度为 O(n)。
+
+**3. 元素插入/删除：**
+
+- **ArrayList：** 在数组中间插入或删除元素需要移动后续元素，时间复杂度为 O(n)。在数组末尾添加元素通常很快，但如果容量不足，需要扩容，时间复杂度为 O(n)。
+- **LinkedList：** 在任意位置插入或删除元素只需修改节点的引用，时间复杂度为 O(1)。
+
+**4. 内存占用：**
+
+- **ArrayList：** 占用连续的内存空间，内存利用率高，但需要预留一定的容量。
+- **LinkedList：** 每个元素都是一个独立的节点，占用内存较多，但可以动态扩展。
+
+**5. 适用场景：**
+
+- **ArrayList：** 适用于频繁随机访问元素的场景，例如根据索引获取元素。
+- **LinkedList：** 适用于频繁插入/删除元素的场景，例如实现队列或栈。
+
+插入和删除元素的复杂度分析
+
+ArrayList
+
+- 插入：
+  - **尾部插入：** 平均时间复杂度为 O(1)，最坏情况为 O(n)（需要扩容）。
+  - **中间插入：** 时间复杂度为 O(n)，因为需要移动后续元素。
+- 删除：
+  - **尾部删除：** 时间复杂度为 O(1)。
+  - **中间删除：** 时间复杂度为 O(n)，因为需要移动后续元素。
+
+LinkedList
+
+- **插入：** 在任意位置插入元素的时间复杂度均为 O(1)。
+- **删除：** 在任意位置删除元素的时间复杂度均为 O(1)。
+
+### PriorityQueue有了解吗？底层实现原理是什么？
+
+PriorityQueue 是 Java 中的一个优先队列，它实现了 Queue 接口。PriorityQueue 中的元素按照其自然顺序（对于实现了 Comparable 接口的元素）或者通过提供的 Comparator 进行排序。
+
+**底层实现原理：**
+
+PriorityQueue 的底层实现是**二叉堆**（通常是小根堆）。二叉堆是一种特殊的完全二叉树，具有以下性质：
+
+1. **结构性：** 除了最后一层，其他层的节点都是满的，最后一层的节点从左到右依次填充。
+2. **堆序性：** 每个节点的值都小于或等于其左右子节点的值（小根堆）。
+
+PriorityQueue 内部使用一个数组来存储堆中的元素，并通过数组下标来表示节点之间的父子关系。
+
+**重要操作：**
+
+1. **插入元素 (offer/add)：**
+   - 将新元素添加到堆的末尾。
+   - 通过上浮操作（sift up）调整堆的顺序，保持堆序性。
+2. **删除元素 (poll/remove)：**
+   - 删除堆顶元素（优先级最高的元素）。
+   - 将堆的最后一个元素移动到堆顶。
+   - 通过下沉操作（sift down）调整堆的顺序，保持堆序性。
+3. **获取堆顶元素 (peek/element)：**
+   - 返回堆顶元素，但不删除。
+
+**时间复杂度：**
+
+- 插入元素：平均时间复杂度为 O(log n)，最坏情况为 O(n)（当需要扩容时）。
+- 删除元素：平均时间复杂度为 O(log n)。
+- 获取堆顶元素：时间复杂度为 O(1)。
+
+**优点：**
+
+- 高效地获取优先级最高的元素。
+- 插入和删除操作具有良好的时间复杂度。
+
+**缺点：**
+
+- 不能随机访问元素。
+
+- 只能获取或删除优先级最高的元素，不能直接获取其他元素。
+
+  
+
+### 什么是序列化和反序列化？Java 中如何实现对象的序列化？
+
+序列化与反序列化
+
+**序列化 (Serialization)** 是将对象的状态信息转换为字节流的过程，以便将其存储到文件、数据库或通过网络传输。
+
+**反序列化 (Deserialization)** 是将字节流转换回对象的过程，恢复对象的状态信息。
+
+Java 中实现对象的序列化
+
+Java 提供了一种内置的序列化机制，通过实现 `java.io.Serializable` 接口来实现。这个接口是一个标记接口，没有任何方法，只是用来标识一个类可以被序列化。
+
+**实现步骤：**
+
+1. **实现 Serializable 接口：**
+
+```java
+import java.io.Serializable;
+
+public class Person implements Serializable {
+    private String name;
+    private int age;
+    // ... 构造函数、getter 和 setter 方法
+}
+
+```
+
+2.**使用 ObjectOutputStream 序列化对象：**
+
+```java
+import java.io.FileOutputStream;
+import java.io.ObjectOutputStream;
+
+Person person = new Person("Alice", 30);
+
+try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("person.dat"))) {
+    oos.writeObject(person);
+} catch (IOException e) {
+    e.printStackTrace();
+}
+
+```
+
+3. **使用 ObjectInputStream 反序列化对象：**
+
+```java
+import java.io.FileInputStream;
+import java.io.ObjectInputStream;
+try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream("person.dat"))) {
+    Person deserializedPerson = (Person) ois.readObject();
+    System.out.println(deserializedPerson.getName()); // 输出: Alice
+    System.out.printl   
+n(deserializedPerson.getAge());  // 输出: 30
+} catch (IOException | ClassNotFoundException e) {
+    e.printStackTrace();
+}
+
+```
+
+   **注意事项：**
+
+- **transient 关键字：** 如果某个字段不需要序列化，可以使用 `transient` 关键字修饰。
+- **serialVersionUID：** 为了保持序列化和反序列化的兼容性，建议为可序列化类显式声明一个 `serialVersionUID`。
+- **自定义序列化：** 如果需要更精细地控制序列化过程，可以实现 `writeObject` 和 `readObject` 方法。
+- **序列化安全性：** 在反序列化不可信的数据时，需要注意潜在的安全风险，如反序列化漏洞。
+
+**替代方案：**
+
+除了 Java 内置的序列化机制，还可以使用第三方库（如 Jackson、Gson）将对象序列化为 JSON 或其他格式，具有更好的灵活性和安全性。
+
+### 介绍下Java中常用的并发工具类。ConcurrentHashMap和Hashtable两者的区别？ConcurrentHashMap的实现方式在JDK 1.7 和 JDK 1.8有什么区别？
+
+- ConcurrentHashMap 和 Hashtable 都是 Java 中线程安全的 Map 实现，但它们在实现方式、性能和适用场景上有所区别：
+
+  **1. 线程安全性：**
+
+  - **Hashtable：** 使用 synchronized 关键字对整个 Hash 表进行同步，同一时刻只能有一个线程进行读写操作，并发度低。
+  - **ConcurrentHashMap：** JDK 1.7 采用分段锁机制，JDK 1.8 采用 CAS + Synchronized，允许多个线程同时进行读操作，并且支持一定程度的并发写操作，并发度高。
+
+  **2. 性能：**
+
+  - **Hashtable：** 由于使用全局锁，并发性能较差，当线程数增加时，性能下降明显。
+  - **ConcurrentHashMap：** 采用更细粒度的锁机制，并发性能更好，在高并发场景下表现更优。
+
+  **3. null 值支持：**
+
+  - **Hashtable：** 不允许 key 或 value 为 null。
+  - **ConcurrentHashMap：** 允许 key 或 value 为 null。
+
+  **4. 迭代器：**
+
+  - **Hashtable：** 迭代器是强一致性的，会反映 Hash 表的最新状态，但可能会抛出 ConcurrentModificationException。
+  - **ConcurrentHashMap：** 迭代器是弱一致性的，不一定反映最新的状态，但不会抛出 ConcurrentModificationException。
+
+  **5. 继承关系：**
+
+  - **Hashtable：** 继承自 Dictionary 类。
+  - **ConcurrentHashMap：** 继承自 AbstractMap 类。
+
+  **适用场景：**
+
+  - **Hashtable：** 适用于低并发场景，或者对 null 值有严格要求的场景。
+  - **ConcurrentHashMap：** 适用于高并发场景，需要更高的性能和吞吐量。
+
+  **总结：**
+
+  ConcurrentHashMap 在几乎所有方面都优于 Hashtable，是更现代、更高效的线程安全 Map 实现。在实际开发中，推荐使用 ConcurrentHashMap。
+
+  **补充：**
+
+  除了 Hashtable 和 ConcurrentHashMap，Java 还提供了 `Collections.synchronizedMap()` 方法，可以将普通的 HashMap 包装成线程安全的 Map，但其性能不如 ConcurrentHashMap。
+
+  
+
+  ConcurrentHashMap 在 JDK 1.7 和 JDK 1.8 的实现方式有较大区别，主要体现在以下几个方面：
+
+  **1. 数据结构：**
+
+  - **JDK 1.7：** 采用 Segment + HashEntry 的结构。Segment 是一种可重入锁，每个 Segment 维护一个 HashEntry 数组，相当于一个小的 HashMap。
+  - **JDK 1.8：** 采用 Node + CAS + Synchronized 的结构。取消了 Segment，直接使用 Node 数组存储数据，当链表长度超过阈值时，会转换为红黑树。
+
+  **2. 并发控制：**
+
+  - **JDK 1.7：** 采用分段锁机制，每个 Segment 独立加锁，可以实现一定程度的并发。
+  - **JDK 1.8：** 采用 CAS + Synchronized 的方式。在 put 操作时，先尝试使用 CAS 乐观锁，如果失败则使用 synchronized 对 Node 加锁。
+
+  **3. 扩容机制：**
+
+  - **JDK 1.7：** 每个 Segment 独立扩容，需要加锁整个 Segment。
+  - **JDK 1.8：** 采用更细粒度的扩容机制，每次只扩容一个 Node 数组，不需要加锁整个 Map。
+
+  **4. 查询性能：**
+
+  - **JDK 1.7：** 由于分段锁的存在，查询时需要先定位 Segment，然后再定位 HashEntry，效率较低。
+  - **JDK 1.8：** 取消了 Segment，直接定位 Node，查询效率更高。
+
+  **总结：**
+
+  JDK 1.8 的 ConcurrentHashMap 相比 JDK 1.7 做了以下改进：
+
+  - **取消 Segment：** 简化了数据结构，降低了内存占用。
+  - **更细粒度的锁：** 采用 CAS + Synchronized，减少了锁的粒度，提高了并发性能。
+  - **更高效的扩容：** 采用更细粒度的扩容机制，提高了扩容效率。
+  - **更快的查询：** 取消了 Segment，直接定位 Node，提高了查询效率。
+
+  总的来说，JDK 1.8 的 ConcurrentHashMap 在性能和可扩展性方面都有了显著提升。
+
+### 介绍下什么是Spring MVC？包含哪些关键组件？当收到请求时各组件的处理流程？
+
+Spring MVC 是 Spring Framework 的一个模块，提供了一种基于 MVC（Model-View-Controller）架构模式的 Web 应用程序开发框架。它帮助开发者构建灵活、可扩展、易于维护的 Web 应用。
+
+Spring MVC 关键组件
+
+Spring MVC 的核心组件包括：
+
+1. **DispatcherServlet (前端控制器)：** 作为整个框架的中央控制器，负责接收所有的请求，并根据请求的 URL 将其分发给相应的处理器进行处理。
+2. **HandlerMapping (处理器映射器)：** 负责根据请求的 URL 找到对应的处理器（Controller）。
+3. **Controller (控制器)：** 处理请求的逻辑，调用业务逻辑层，并返回 ModelAndView 对象（包含模型数据和视图名称）。
+4. **ModelAndView (模型和视图)：** 封装了要返回给客户端的数据（模型）和要渲染的视图的名称。
+5. **ViewResolver (视图解析器)：** 负责将视图名称解析为实际的视图对象（如 JSP、Thymeleaf 模板等）。
+6. **View (视图)：** 负责渲染最终的页面，并将模型数据展示给用户。
+7. **Interceptor (拦截器)：** 可选组件，用于在请求处理的特定阶段执行额外的逻辑，如日志记录、权限验证等。
+
+Spring MVC 处理流程
+
+当 Spring MVC 收到一个请求时，处理流程如下：
+
+1. **请求到达 DispatcherServlet：** 用户发送请求，DispatcherServlet 接收请求。
+2. **HandlerMapping 查找处理器：** DispatcherServlet 根据请求的 URL 查找对应的 HandlerMapping，HandlerMapping 返回对应的处理器（Controller）。
+3. **调用处理器 (Controller)：** DispatcherServlet 调用查找到的处理器，处理器执行业务逻辑，并返回 ModelAndView 对象。
+4. **ViewResolver 解析视图：** DispatcherServlet 将 ModelAndView 对象传递给 ViewResolver，ViewResolver 根据视图名称解析出对应的视图对象。
+5. **视图渲染：** DispatcherServlet 将模型数据传递给视图对象，视图对象进行渲染，生成最终的响应内容。
+6. **返回响应：** DispatcherServlet 将渲染后的响应内容返回给客户端。
+
+流程图：
+
+```java
+用户请求
+         ↓
+   DispatcherServlet
+         ↓
+  HandlerMapping
+         ↓
+     Controller
+         ↓
+   ModelAndView
+         ↓
+   ViewResolver
+         ↓
+       View
+         ↓
+    响应返回
+```
+
+**补充说明：**
+
+- Spring MVC 还支持其他组件，如 `HandlerAdapter`、`LocaleResolver`、`ThemeResolver` 等，用于处理更复杂的场景。
+- Spring MVC 的配置方式非常灵活，可以通过 XML、Java 注解或 Java Config 进行配置。
+
+希望以上介绍能帮助您理解 Spring MVC 的基本概念和工作流程！
